<resources>
    <string name="app_name">PocketChinese</string>
    <string name="chinese">中文</string>
    <string name="pinyin">Pīnyīn</string>
    <string name="my_language">Русский</string>
    <string name="chinese_placeholder">Добавьте слово</string>
    <string name="pinyin_placeholder">Добавьте романизацию</string>
    <string name="my_language_placeholder">Добавьте перевод</string>
    <string name="search_hidden_search_format">Поиск</string>
    <string name="search_hint">Русский, 汉语, Pīnyīn</string>
    <string name="search_hidden_search_format_defolt">Нечеткий</string>
    <string name="search_hidden_search_format_comple">Совпадение</string>
    <string name="empty_search_result">Нет результатов...</string>
    <string name="menu_item_dictionary">Словарь</string>
    <string name="menu_item_suggest_words">Слова</string>
    <string name="menu_item_learn_words">Повторение</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="learn_words_available">Доступные</string>
    <string name="learn_words_my">Изучение</string>
    <string name="learn_words_sorting">Сортировка</string>
    <string name="delete">Удалить</string>
    <string name="move_word">Переместить</string>
    <string name="clear_statistic_msg">Вся статистика будет удалена, продолжить ?</string>
    <string name="edit_name">Переименовать</string>
    <string name="edit">Изменить</string>
    <string name="learn_words_sorting_az">А-Я</string>
    <string name="learn_words_sorting_za">Я-А</string>
    <string name="learn_words_new_first">Показать сначала новые</string>
    <string name="tags">Теги</string>
    <string name="suggest_lists_title">Доступные списки</string>
    <string name="user_lists_title">Изучение</string>
    <string name="suggest_lists_new">Пополнения</string>
    <string name="suggest_lists_other">Остальные списки</string>
    <string name="need_repeat_list">Необходимо повторить</string>
    <string name="lits_other">Остальные списки</string>
    <string name="user_lists_statistic">Моя статистика</string>
    <string name="user_lists_repeated">Повторено слов</string>
    <string name="user_lists_added">Добавлено слов</string>
    <string name="user_lists_by_leng">Усваемость</string>
    <string name="user_lists_need_repeat">Необходимо повторить</string>
    <string name="user_lists_other">Остальные списки</string>
    <string name="words_other">Остальные слова</string>
    <string name="user_lists_last_30">За последние 30 дней*</string>
    <string name="count_words">Слов: </string>
    <string name="success">Успешность: </string>
    <string name="last_repeat">Последнее повторение: </string>
    <string name="next_repeat">Следующие повторение: </string>
    <string name="count_words_right">Слов</string>
    <string name="activate">Активировать</string>
    <string-array name="success_count">
        <item>Не осв.</item>
        <item>Не осв.</item>
        <item>Не удов.</item>
        <item>Не удов.</item>
        <item>Удов.</item>
        <item>Удов.</item>
        <item>Хор.</item>
        <item>Хор.</item>
        <item>Отл.</item>
        <item>Отл.</item>
    </string-array>
    <plurals name="words">
        <item quantity="zero">%d Слов</item>
        <item quantity="one">%d Слово</item>
        <item quantity="few">%d Слова</item>
        <item quantity="many">%d Слов</item>
        <item quantity="other">%d Слов</item>
    </plurals>
    <plurals name="words_dc">
        <item quantity="zero">%d слов</item>
        <item quantity="one">%d слово</item>
        <item quantity="few">%d слова</item>
        <item quantity="many">%d слов</item>
        <item quantity="other">%d слов</item>
    </plurals>
    <plurals name="lists">
        <item quantity="zero">%d списках</item>
        <item quantity="one">%d списке</item>
        <item quantity="few">%d списках</item>
        <item quantity="many">%d списках</item>
        <item quantity="other">%d списках</item>
    </plurals>
    <string name="ago_suffix">назад</string>
    <string name="aft_prefix">через</string>
    <string name="need_repeat">Нужно повторить</string>
    <plurals name="minuets">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минуту</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">%d часов</item>
        <item quantity="one">%d час</item>
        <item quantity="few">%d часа</item>
        <item quantity="many">%d часов</item>
        <item quantity="other">%d часов</item>
    </plurals>
    <plurals name="days">
        <item quantity="zero">%d дней</item>
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
        <item quantity="other">%d дней</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d неделю </item>
        <item quantity="few">%d недели</item>
        <item quantity="many">%d недель</item>
        <item quantity="other">%d недель</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">%d месяц</item>
        <item quantity="few">%d месяца</item>
        <item quantity="many">%d месяцев</item>
        <item quantity="other">%d месяцев</item>
    </plurals>
    <string name="more_then_year">больше года назад</string>
    <string name="statistics">Статистика</string>
    <string name="successed">Успешность</string>
    <string name="actions">Действия</string>
    <string name="block">Блок %d</string>
    <string name="clear_statistic">Сбросить</string>
    <string name="add_word">Добавить</string>
    <string name="new_list">Придумайте название \n нового списка</string>
    <string name="rename_list">Придумайте новое \n название для списка</string>
    <string name="change">Изменить</string>
    <string name="new_word">Новое слово</string>
    <string name="study_list_last">Последнее</string>
    <string name="study_list_next">Следующие</string>
    <string name="study_list_repeted">Повторено</string>
    <string name="study_list_count">Всего слов</string>
    <string name="study_list_need">Нужно \n повторить</string>
    <string name="rumanizetion">Романизация</string>
    <string name="what_todo_statistic">Статистика</string>
    <string name="save_statistic">Сохранить статистику</string>
    <string name="clear_statistic_on_move">Сбросить статистику</string>
    <string name="edit_word">Редактировать</string>
    <string name="optionse">Дополнительно</string>
    <string name="enter_name">Имя</string>
    <string name="add_to_list">Добавить карточку</string>
    <string name="enter_name_placeholder">Придумайте имя</string>
    <string name="rename_placeholder">Введите новое имя</string>
    <string name="create">Создать</string>
    <string name="repeat">Повторить</string>
    <string name="continues">Продолжить</string>
    <string name="rename">Переименовать</string>
    <string name="cancel">Отмена</string>
    <string name="items">элементов</string>
    <string name="dialog_chose_block">Переместить</string>
    <string name="dialog_chose_block_mes">В какой блок ?</string>
    <string name="move">Переместить</string>
    <string name="notifi_empty_list_name">У создаваемого списка должно быть имя !</string>
    <string name="notifi_busy_list_name">Такое имя уже занято</string>
    <string name="study_list">Список</string>
    <string name="notifi_empty_field">Поле должно быть заполнено</string>
    <string name="notifi_max_length">Превышена максимальная длинна</string>
    <string name="Combine">Объединить</string>
    <string name="have_match">Найдено совпадение</string>
    <string-array name="train_type">
        <item>Русский - 汉字</item>
        <item>汉字 - pīnyīn</item>
        <item>汉字 - Русский</item>
    </string-array>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="nitify_invalid_chars">Поле содержит недопустимые символы: !#;:() итд.</string>
    <string name="chose_type">Тип тренировки</string>
    <string name="chose_block">блок</string>
    <string name="all">Все</string>
    <string name="only_needed">Необходимо повторить</string>
    <string name="style_and_theme">Стиль и Тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="language_input">Язык и ввод</string>
    <string name="use_app_keyboard">Использовать PocketKeyboard для ввода pinyin</string>
    <string name="on_app_keyboard_as_default">Установить по умолчанию</string>
    <string name="off_app_keyboard_as_default">Отключить по умолчанию</string>
    <string name="repeat_type">Обучение</string>
    <string name="ignore_chn">Повторять иероглифы</string>
    <string name="ignore_pin">Повторять романизацию</string>
    <string name="ignore_trn">Повторять перевод</string>
    <string name="about_app_u"><u>О программе</u></string>
    <string name="about_app">О программе</string>
    <string name="about_app_text">\ PocketChinese - русско-китайский словарь с примерами, справочник грамматики и приложение для помощи в изучении слов. В базе данных приложения содержится 58 тысяч слов и словосочетаний и более 130 тысяч примеров.\n
        \n
        В базы данных слов и примеров были включены данные с сайтов <a href="https://www.zhonga.ru/">zhonga.ru</a>  и <a href="https://bkrs.info/">bkrs.info</a>\n
\n
        В приложение использовались иконки с сайта <a href="https://icons8.com/">icons8.com</a>\n
\n
Посетите мой github <a href="https://github.com/yingenus/">github.com/yingenus</a> может быть там что-нибудь есть ;)\n
        \n
Для связи пишите на evgeniyaton@gmail.com
</string>
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>
    <string name="study_list_header">Всего слов:</string>
    <string name="dictionary_header">Результат поиска</string>
    <string name="dictionary_history_header">История</string>
    <string name="given_header">Доступные списки</string>
    <string name="repeated_header">Списки слов</string>
    <string name="user_header">Мои списки</string>
    <string name="dictionary_start_msg">
        Введите какой-нибудь \n
        запрос на \n
        русском, 汉语 или pīnyīn</string>
    <string name="start_us_list_msg">Создайте свой список</string>
    <string name="activate_input_msg_1">
        Пожалуйста!
    </string>
    <string name="activate_input_msg_2">
        активируйте клавиатуру
    </string>
</resources>