<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">

    <Button
        style="@style/Style.PocketChinese.Button.TextButton"

        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:icon = "@drawable/ic_close"
        app:iconTint = "@color/black"
        android:layout_gravity="top|right"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/msg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_input_msg_1"
            android:textSize="23sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/card_view"

            />

        <TextView
            android:id="@+id/msg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_input_msg_2"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@id/msg_1"
            app:layout_constraintStart_toStartOf="@id/msg_1"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorSurface"
            android:background="?attr/colorSurface"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msg_2"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                >

                <ImageView
                    android:id="@+id/app_icn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/app_icn"
                    app:layout_constraintTop_toTopOf="@id/app_icn"
                    />

                <TextView
                    android:id="@+id/input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pinyin"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/app_icn"
                    app:layout_constraintStart_toStartOf="@id/app_name"
                    />

                <Switch
                    android:id="@+id/switch_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:thumbTint="?attr/colorSecondary"
                    android:trackTint="?attr/colorSecondary"
                    android:enabled="false"
                    android:checked="true"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button

        android:id="@+id/accept_button"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/activate"
        />

</FrameLayout>